--- a/repo/Home-FT/src/app/core/home/home.component.html
+++ b/repo/Home-FT/src/app/core/home/home.component.html
@@ -1,12 +1,5 @@
 <div class="home">
 
-
-  // TODO: Change to router outlet
-
-  @if (profileService.session()) {
-
-  } @else {
-    <app-login-modal></app-login-modal>
-  }
+  <h1> logged </h1>
 
 </div>
